syntax = "proto3";

option csharp_namespace = "System.Text.Json.Protobuf.Tests";

message MessageWithEnum {
  TestEnum enum_field = 1;
  int32 regular_field = 2;
}

enum TestEnum {
  UNKNOWN = 0;
  FIRST_OPTION = 1;
  SECOND_OPTION = 2;
}